--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "npmo-auth-ldap",
+  "name": "@npm/npmo-auth-ldap",
   "version": "1.0.0",
   "description": "npm On-Site plugin for authenticating against LDAP.",
   "main": "index.js",
   "scripts": {
-    "//pretest": "standard",
+    "pretest": "standard",
     "test": "tap --timeout=5000 --coverage ./test/*"
   },
   "repository": {
